Minor Panama API updates